<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.appsbytravis.acmusic.HomeActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/gamecubeBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gamecube_btn" />

        <Button
            android:id="@+id/wwcfBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wild_world_city_folk_btn" />

        <Button
            android:id="@+id/newleafBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_leaf_btn" />

        <include layout="@layout/progressbar" />
        <Button
            android:id="@+id/pauseDownloadBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:text="@string/pause_download"/>
    </LinearLayout>

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="top"
        android:background="@color/colorPrimary"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/ADMOB_BANNER" />
</android.support.design.widget.CoordinatorLayout>
